# mpc_based_tracking_control_for_diff_drive

./: CMakeLists.txt  README.md  package.xml
action/: ExecuteControl.action
data/: dataset.npy  dataset_1.npy  dataset_o2.csv
launch/: assignment.launch
scripts/: load_data.py  move_robot_executor.py  move_robot_mission.py  mpc_control.py  mpc_tracking_controller.py
src/: path_sampling.cpp
